changes to build kafka ui from jdk 17